# funasr-hermes-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
src/funasr_plugin/: __init__.py  funasrd.py  provider.py
