[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "funasr-hermes-plugin"
version = "1.0.0"
description = "FunASR SenseVoiceSmall STT plugin for Hermes Agent — local, GPU-accelerated, daemon-backed Chinese speech recognition"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hermes User" }]
license = { text = "MIT" }
dependencies = [
    "funasr>=1.3",
    "torch>=2.0",
    "torchaudio>=2.0",
    "soundfile>=0.12",
    "silero-vad>=6.2",
]

[project.entry-points."hermes_agent.plugins"]
funasr = "funasr_plugin"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
